force-app/main/default/objects/SecondaryAssessment__c/SecondaryAssessment__c.object-meta.xml
<CustomObject>
    <label>Secondary Assessment</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Assessment No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>