force-app/main/default/objects/SecondaryAssessment__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>TEXT(Assessment_Type__c) &amp;
&quot; - &quot; &amp;
LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;) &amp;
&quot;/&quot; &amp;
LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;) &amp;
&quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp;
&quot; - &quot; &amp;
IF(
    ISBLANK(CreatedBy.FirstName),
    CreatedBy.LastName,
    CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName
)</formula>
    <label>Assessment Name</label>
    <type>Text</type>
</CustomField>